# binary-object

./: Cargo.toml  LICENSE  tester.html
src/: main.rs
src/data/: mod.rs  movie.rs  service.rs
